# fraud-risk-scoring

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  make_payload.py  payload.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
api/: main.py  model_loader.py  schemas.py
configs/: base.yaml  schema.yaml
data/: score_sample.csv
data/sample/: sample.csv
models/: production.json
scripts/: run_api.ps1
src/frs/: api.py  artifacts.py  calibration.py  cli.py  config.py  data_io.py  drift.py  evaluation.py  explain_cli.py  explain_service.py  explainability.py  features.py  logging_setup.py  models.py  paths.py  policy.py  reporting.py  splits.py
src/frs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
