[project]
name = "frs"
version = "0.1.0"
description = "Fraud / Risk Scoring System with Calibration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
frs = "frs.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
