[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frs"
version = "0.1.0"
description = "Fraud / Risk Scoring System (FRS) CLI: calibrated risk scoring, cost-sensitive thresholding, drift signals, and explainability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Wissebo Abdulmajid" }
]
keywords = ["fraud", "risk-scoring", "calibration", "mlops", "shap", "drift", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  # Core numeric + data
  "numpy>=1.26",
  "pandas>=2.1",

  # Modeling + calibration + metrics
  "scikit-learn>=1.4",
  "lightgbm>=4.3",
  "joblib>=1.3",

  # Explainability
  "shap>=0.44.0",

  # CLI + UX
  "typer>=0.12",
  "rich>=13.7",

  # Config / validation
  "pyyaml>=6.0",
  "pydantic>=2.6",

  # Plotting for reports/figures
  "matplotlib>=3.8",
  # API
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
frs = "frs.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
